syntax = "proto3";

package lessonmgmt.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/lessonmgmt/v1;lpb";


message GetByStudentSubscriptionRequest {
  repeated string student_subscription_id = 1;
}
  
message GetByStudentSubscriptionResponse {
  message ClassUnassigned {
    string student_subscription_id = 1;
    bool is_class_unassigned = 2;
  }
  repeated ClassUnassigned class_unassigned = 1;
}
  
service ClassReaderService {
  rpc GetByStudentSubscription(GetByStudentSubscriptionRequest) returns (GetByStudentSubscriptionResponse);
}
  